--- a/src/components/Destination/Destination.css
+++ b/src/components/Destination/Destination.css
@@ -26,3 +26,57 @@
   .bar >li:last-of-type:after {
     top: -50%;
   }
+
+  .inputStyle{
+
+    width: 100%;
+    min-height: 40px;
+    outline: lightgrey;
+    border-radius: 4px;
+    font-weight: 600;
+    
+
+  }
+
+  .destination-container{
+    width: 100%;
+    background-color: lightgray;
+    border-radius: 7px;
+    padding: 10px;
+    color: #333;
+    font-weight: 600;
+
+  }
+
+  .pick-btn{
+
+  background-color: tomato;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+  font-weight: 600;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+  margin: 10px 0;
+
+
+  }
+
+  @media(max-width:991px){
+
+    #contentSection{
+      flex-direction: column;
+    }
+
+    #mapSection{
+
+      flex-direction: column;
+
+    }
+
+  }
